# django-handy-models

./: .gitignore  MANIFEST.in  README  README.md  README.rst  setup.cfg
src/django_handy_models/: .gitignore  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/django_handy_models/fixtures/: django_handy_models.json
src/django_handy_models/migrations/: 0001_initial.py
src/django_useful_models/: admin.py  apps.py
src/django_useful_models/migrations/: 0001_initial.py  0002_auto_20210504_0859.py  0003_auto_20210504_0908.py  0004_auto_20210504_0915.py  0005_auto_20210504_0916.py  0006_alter_country_calling_code.py  0007_auto_20210504_0933.py  0008_alter_currency_name.py  0009_country_currency.py  0010_remove_country_currency.py  0011_country_currency.py  0012_rename_currency_country_currencies.py  0013_auto_20210504_1001.py  0014_timezone.py  0015_alter_timezone_utc_dst_offset.py
