[metadata]
name = django-handy-models
version = 0.7
description = Handy models for Django
long_description = file: README.md
author = Felix Eklöf
author_email = felixeklof@icloud.com
url = https://github.com/Feelixe-tin/django-handy-models
license = MIT License
keywords =
    django
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
install_requires = Django>=2.2
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
